# mirobody

./: .gitattributes  .gitignore  AGENTS.md  CONFIG.md  CONTRIBUTING.md  DATABASE.md  LICENSE  LICENSE-3RD-PARTY  PROVIDERS.md  QUICKSTART.md  README.md  TOOLS.md  compose.yaml  config.yaml  deploy.sh  main.py  main_worker.py  package.json  pyproject.toml  requirements.txt
.github/: RELEASE_NOTES_GUIDE.md
.github/workflows/: README.md  TEST_WORKFLOW.md  pypi-release.yml  test-build.yml
cmd/: result.json  tools.json
config/: config.example.yaml
docker/: docker-compose.yaml  init_fake_data.sh
mirobody/: __init__.py
mirobody/chat/: __init__.py  agent.py  asr.py  file.py  history.py  mcp_loader.py  memory.py  message.py  model.py  service.py  session.py  session_share.py  summary.py  task.py  unified_chat_service.py  user.py  user_config.py  user_profile.py
mirobody/chat/adapters/: __init__.py  base.py  http.py
mirobody/indicator/: README.md  concept_graph.py  embed.py  main.py  mapping.py  requirements.txt  search.py  taxonomy.py
mirobody/indicator/fhir/: bridge.py  common.py  graph_builder.py  merge.py  search.py  siblings.py  taxonomy.py  test.py  test_common.py
mirobody/indicator/health/: README.md  common.py  embeddings_db.py  embeddings_ref.py  graph_builder.py  merge.py  search.py  taxonomy.py
mirobody/mcp/: __init__.py  resource.py  service.py  tool.py
mirobody/pub/agents/: README.md  __init__.py  baseline_agent.py  deep_agent.py  mix_agent.py
mirobody/pub/htdoc/: index.html
mirobody/pub/prompts/: theta_health.jinja
mirobody/pub/resources/: chart_url.html  chart_url.json  upload.html  upload.json
mirobody/pub/tools/: README.md  __init__.py  _chart_service_schema_loader.py  chart_service.py  code_service.py  file_read_service.py  file_write_service.py  memory_service.py  render-chart.js  skill_service.py  todo_service.py
mirobody/pub/tools_health/: genetic_service.py  health_indicator_service.py  user_service.py
mirobody/pulse/: CLAUDE.md  README.md  __init__.py  base.py  cursorrules  manager.py  setup.py
mirobody/pulse/apple/: INTEGRATION_GUIDE.md  README.md  __init__.py  models.py  platform.py  provider.py  statistics_service.py
mirobody/pulse/core/: README.md  __init__.py  auth.py  constants.py  data_quality_service.py  database.py  distributed_lock.py  fhir_mapping.py  indicators_info.py  manage_service.py  models.py  push_service.py  scheduler.py  units.py  user.py  user_health_service.py  value_range_validator.py
mirobody/pulse/file_parser/: FILE_PROCESSING_GUIDE.md  __init__.py  config.py  file_processor.py  file_upload_manager.py
mirobody/pulse/gate_tests/: README.md  conftest.py  format_tester.py  pytest.ini  test_format_data.py
mirobody/pulse/router/: __init__.py  apple_router.py  file_router.py  food_router.py  manage_router.py  middleware.py  public_router.py  session_share_router.py  skill_router.py  user_router.py
mirobody/pulse/theta/: README.md  __init__.py
mirobody/res/: fhir_id_map.npy
mirobody/res/sql/: 00_init_schema.sql  01_basedata.sql  02_settings.sql  03_deepagents.sql  10_health_tab.sql  20_migration_add_reconnect_connect_info.sql  21_health_user_profile_by_system.sql  27_add_tags_to_sessions.sql  28_add_platform_to_series_data.sql  30_add_fhir_mapping_to_th_series_data.sql  30_user_custom_skills.sql  34_add_session_status_fields.sql  36_add_ethnicity_to_health_app_user.sql  39_create_th_files.sql  42_create_unit_type_and_indicator_full_dim.sql  44_th_sessions_add_status.sql  53_add_action_type_to_user_profile.sql  55_health_data_oura.sql  70_add_embedding_model_column.sql  75_2_monitor_tables.sql  75_monitor_tables.sql  (+6 more)
mirobody/server/: __init__.py  middlewares.py  server.py  worker.py
mirobody/task/: __init__.py  base.py  indicator_sync.py  loader.py  profile_refresh.py
mirobody/user/: __init__.py  apple.py  email.py  firebase.py  google.py  jwt.py  oauth_service.py  sharing.py  user.py  user_service.py  webauthn.py
mirobody/utils/: __init__.py  data.py  db.py  db_redis_compat.py  distributed_websocket.py  embedding.py  http.py  i18n.py  log.py  redis_compat.py  req_ctx.py  truncate.py  utils_asr.py  utils_audio.py  utils_auth.py  utils_callstack.py  utils_embedding.py  utils_encrypt.py  utils_user.py
skills/ask-questions-if-underspecified/: metadata.json
skills/backend-development/: metadata.json
skills/changelog-generator/: metadata.json
skills/code-refactoring/: metadata.json
skills/code-review/: metadata.json
skills/competitive-ads-extractor/: metadata.json
skills/doc-coauthoring/: metadata.json
skills/docx/: metadata.json
skills/frontend-design/: metadata.json
skills/job-application/: metadata.json
skills/lead-research-assistant/: metadata.json
skills/meeting-insights-analyzer/: metadata.json
skills/pdf/: metadata.json
skills/pptx/: metadata.json
skills/python-development/: metadata.json
skills/skill-creator/: metadata.json
skills/webapp-testing/: metadata.json
skills/xlsx/: metadata.json
tools/: finance_fundamentals_service.py  skill_service.py
tools/health/: health_indicator_service.py  user_service.py
(+405 files in other folders)
